fix toggle alignment. Update weather icons and conditions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -537,11 +537,11 @@ body.widget-panel-open .my-widget #widget-container {
 }
 
 #gw-toggle.open {
-  transform: translateY(0);
+  transform: translate(-50%,0);
 }
 
 #gw-toggle.closed {
-  transform: translateY(75px);
+  transform: translate(-50%, 75px);
 }
 
 /* Toggle button */
@@ -551,27 +551,21 @@ body.widget-panel-open .my-widget #widget-container {
   border-radius:28px 28px 0 0;
   border:1px solid rgba(255,255,255,0.25);
   border-bottom:none;
-  /* background: rgba(0,0,0,0.85); */
-  /* color:#fff; */
   display:grid;
   place-items:center;
   cursor:pointer;
   padding:0;
   line-height:1;
-  font-size:16px;
-  /* width: 25%; */
+  font-size:14px;
   position: fixed;
-  bottom: 85px;
-  /* right: calc(50vw - 1%); */
-  right: calc(50vw - 10%);
-  /* border: none; */
-  /* border-radius: 18px; */
-  /* padding: 4px 8px; */
-  /* cursor: pointer; */
-  font-size: 14px;
-  /* box-shadow: 0 8px 30px rgba(0,0,0,0.35); */
+  bottom: 88px;
+
+  left: 50%;
+  transform: translate(-50%, 0);
+  
   transition: transform 0.35s ease;
   text-align: center;
+
 }
 
 /* ticker scrolling area */
@@ -612,9 +606,9 @@ body.widget-panel-open .my-widget #widget-container {
   width: 75px;
 }
 
-.weather-bottom-ticker {
+/* .weather-bottom-ticker {
   margin-top: 7px;
-}
+} */
 
 .gw-ticker-bigger-icon {
   height: 75px;
